--- a/ActorSystem/build.gradle
+++ b/ActorSystem/build.gradle
@@ -6,6 +6,8 @@ dependencies {
 
     compile 'com.typesafe.akka:akka-actor_2.10:2.3.0'
     compile 'com.typesafe.akka:akka-slf4j_2.10:2.3.0-RC4'
+    compile 'com.typesafe.akka:akka-contrib_2.10:2.3.0'
+
 
     compile 'org.springframework:spring-context:4.0.2.RELEASE'
     compile 'cglib:cglib-nodep:2.2.2'
@@ -13,9 +15,9 @@ dependencies {
 
     compile 'joda-time:joda-time:2.3'
     compile 'com.google.guava:guava:16.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.1'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.3.1'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.3.1'
+
+    compile project(':Business')
+
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
