--- a/Business/build.gradle
+++ b/Business/build.gradle
@@ -2,18 +2,21 @@ apply plugin: 'groovy'
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.2.0'
-    compile 'org.slf4j:slf4j-api:1.7.5'
-    compile 'ch.qos.logback:logback-classic:1.0.6'
+
 
     compile 'org.springframework:spring-context:4.0.2.RELEASE'
     compile 'cglib:cglib-nodep:2.2.2'
     compile 'javax.inject:javax.inject:1'
 
     compile 'joda-time:joda-time:2.3'
+    compile 'org.joda:joda-money:0.9.1'
     compile 'com.google.guava:guava:16.0'
     compile 'org.glassfish.jersey.core:jersey-client:2.7'
-    compile ':Messages'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.1'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.3.1'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.3.1'
+
+    compile project(':Messages')
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
