--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'groovy'
     apply plugin: 'eclipse'
 
     sourceCompatibility = 1.7
-    group = 'com.aa.lookAhead.akkaDemo'
-    version = '1.0-SNAPSHOT'
+    group = 'com.github.benjaminAbbitt.rTipped'
+    version = '0.1-SNAPSHOT'
 
     repositories {
         mavenCentral()
@@ -12,6 +13,8 @@ subprojects {
     }
 
     dependencies {
-
+        compile 'org.codehaus.groovy:groovy-all:2.2.0'
+        compile 'org.slf4j:slf4j-api:1.7.5'
+        compile 'ch.qos.logback:logback-classic:1.0.6'
     }
 }
